--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-pip>=21.3.1
-pytest-cov==2.12.1
-Flask==2.0.2     
-Flask-SQLAlchemy==3.0.1    
-gunicorn==20.1.0
+pip
+pytest-cov
+Flask   
+Flask-SQLAlchemy   
+gunicorn
